public/styles/styles.css
body {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 300;
  font-size: 1.3rem;
}
ul, li {
  list-style: none;
}

h3 {
  font-weight: 600;
  text-align: center;
  font-size: 1.5rem;
}

button {
  border: none;
  background: #265f82;
  color: white;
  cursor: pointer;
  width:70px;
  height: 70px;
  transition: background .3s ease;
}

button:hover {
  border: none;
  background: #1F4C69;
  color: white;
  padding: 10px;
}

button:disabled {
  cursor: default;
  background: #698ea5;
}

.centered-form {
  display: flex;
  align-items: center;
  height: 100vh;
  width: 100vw;
  justify-content: center;
  background: rgba(43,107,223,1);
}

.centered-form__form {
  background: rgba(250, 250, 250, 0.9);
  border: 2px solid black;
  border-radius: 5px;
  padding: 0px 40px;
  margin: 20px;

  width: 230px;
}

.form-field {
  margin: 20px 0;
}
.form-field > * {
  width: 100%;
}

.form-field label {
  display: block;
  margin-bottom: 7px;
}

.form-field input, .form-field select {
  border: 1px solid #e1e1e1;
  padding: 10px;
  font-size: 1.1rem;
  width: 170px;
  height: 20px;
}

.chat__sidebar {
  overflow-y: auto;
  width: 260px;
  height: 100vh;
  background: -moz-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* ff3.6+ */
  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(49,84,129,1)), color-stop(100%, rgba(39,107,130,1))); /* safari4+,chrome */
  background: -webkit-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* safari5.1+,chrome10+ */
  background: -o-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* opera 11.10+ */
  background: -ms-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* ie10+ */
  background: linear-gradient(325deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* w3c */
}

.chat__sidebar h3 {
  color: #e6eaee;
  margin: 10px 20px;
  text-align:center;
}

.chat__sidebar ol {
  text-align: center;
  width: 90%;
  padding: 0px 10px;
}

.chat__sidebar li {
  margin-right: 50px;
  background: #e6eaee;
  border: 1px solid #e1e1e1;
  border-radius: 5px;
  padding: 10px;
  margin: 10px;
  /*text-align: center;*/
}
.chat__area{
  overflow-y: auto;
  /*background-color:#e6eaee;*/
  /*margin: 15px; */
  border:1px solid #e6eaee;
  flex-basis: 700px;
}
.chat__main {
  display: flex;
  flex-direction: column;
  height: 100vh;
  width: 100%;
  justify-content: space-between;
}

.chat__messages {
  flex-grow: 1;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}
.chat__footer {
  background: #e6eaee;
  display: flex;
  padding: 10px;
  margin: 15px; 
  flex-shrink: 0;
}
.chat__footer form {
  flex-grow: 1;
  display: flex;
}

.chat__footer form * {
  margin-right: 10px;
}

.chat__footer input {
  border: none;
  padding: 10px;
  flex-grow: 1;
}
.room {
  text-align: center;
  color:#e8600e;
}
.online{
  text-align: center;
  font-size: 25px;
  margin-bottom:20px;
  color:#188b52;;
}
.chat__messages {
  list-style-type: none;
  padding: 10px;
}
.container { 
    display: flex; 
  flex-direction: row;
   }
.message .male{
  display: flex;
  flex-direction: column;
  padding: 20px;
  box-sizing: border-box;
  width:250px;
  min-height: 150px;
  /*opacity: 0.8;*/
  border-radius: 10px;
  justify-content: space-around;
  margin-left: 20px;
  margin-bottom: 50px;
 position: relative;
  background: lightblue;
  border: 4px solid #c2e1f5;
}
.message .female{
  display: flex;
  flex-direction: column;
  padding: 20px;
  box-sizing: border-box;
  width:250px;
  min-height: 150px;
  /*opacity: 0.8;*/
  border-radius: 10px;
  justify-content: space-around;
  margin-left: 20px;
  margin-bottom: 50px;
  position: relative;
  background: #ffc0cb;
  border: 4px solid #ffcffd;
}
.message .admin{
  display: flex;
  flex-direction: column;
  padding: 20px;
  box-sizing: border-box;
  width:250px;
  min-height: 150px;
  /*opacity: 0.8;*/
  border-radius: 10px;
  justify-content: space-around;
  margin-left: 20px;
  margin-bottom: 50px;
 position: relative;
  background: lightgreen;
  border: 4px solid #98fb98;
}

.message .male:after, .message .male:before {
  right: 100%;
  top: 50%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
position: absolute;
  pointer-events: none;
}
.message .admin:after, .message .admin:before {
  right: 100%;
  top: 50%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
position: absolute;
  pointer-events: none;
}
.message .female:after, .message .female:before {
  right: 100%;
  top: 50%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}
.message .male:after {
  top:50px;
  border-right-color: lightblue;
  border-width: 15px;
}
.message .admin:after {
  top:50px;
  border-right-color: lightgreen;
  border-width: 15px;
}
.message .female:after {
  top:50px;
  border-right-color: #ffc0cb;
  border-width: 15px;
}
.message .male:before {
  top:45px;
  border-right-color: #c2e1f5;
  border-width: 20px;
}
.message .admin:before {
  top:45px;
  border-right-color: #98fb98;
  border-width: 20px;
}
.message .female:before {
  top:45px;
  border-right-color: #ffcffd;
  border-width: 20px;
}
/*.message .female:after {
  border-color: rgba(255,192, 203, 0);
  border-right-color: #ffc0cb;
  border-width: 20px;
  margin-top: -50px;
}
.message .female:before {
  border-color: rgba(255, 199, 251, 0);
  border-right-color:#ffc7fb;
  border-width: 20px;
  margin-top: -50px;
}*/
.message__title {
  display: flex;
  margin:5px;
}

.message__title h4 
{
  color:black;
  font-weight: 600;
  font-size: 1.6rem;
  margin:0 35px 0 0;
}
.message__body {
  word-wrap: break-word;
  overflow-wrap: break-word;
  font-family: 'Sniglet', cursive;
  margin-left:5px;
}
.message__title span {
  color: grey;
  margin-top: 2px;
  font-size: 1.3rem;
}
.male{
  color: darkblue;
   /*border:1px solid blue;*/
  /*background: lightblue*/
}
.female{
  color:purple;
   /*border:1px solid magenta;*/
  /*background:pink*/
}
.admin{
  color: darkgreen;
  /*background: lightgreen;*/
}
.pic{
  height: 50px;
  border-radius: 50%;
  background: white;
  margin-top: 15px;
  width: 50px; 
  padding: 7px;
  border:1px solid blue;
flex-basis:20%;
}
.pic:hover{
  cursor: pointer;
}
.border{
  border: 3px solid blue;
}
@media (max-width: 600px) {
  * {
    font-size: 1.1rem;
  }
  ul, li {
  padding-left: 15px;
}
.centered-form__form{
  margin-top: 150px;
}
.form-field input{
  width: 170px;
  height: 20px;
}
.message__title span{
  margin-top: 5px;
  font-size: 1.08rem;
}
  .chat__sidebar {
    display: none;
  }
  .room{
    text-align: center;
    font-size: 35px;
  }
  .online{
    text-align: center;
    font-size: 25px;
  }
  text
  .chat__footer{
    flex-direction: column;
    margin-bottom: 50px;
  }
  
  .chat__footer form{
    margin-bottom: 10px;
  }
}

